erDiagram
    SOURCES ||--o{ TRANSACTIONS : has
    ASSETS ||--o{ TRANSACTIONS : has
    ASSETS ||--o{ WATCHLIST : has
    SOURCES ||--o{ FIAT_HOLDINGS : has
    ASSETS ||--o{ PRICE_CACHE : priced_by

    SOURCES {
        uuid id PK
        uuid user_id FK
        text name
        text type
        timestamptz deleted_at
    }
    ASSETS {
        uuid id PK
        text coingecko_id
        text symbol
        text name
    }
    TRANSACTIONS {
        uuid id PK
        uuid user_id FK
        uuid asset_id FK
        uuid source_id FK
        text type
        numeric quantity
        numeric price_usd
        date txn_date
        timestamptz deleted_at
    }
    WATCHLIST {
        uuid id PK
        uuid user_id FK
        uuid asset_id FK
        numeric target_price_usd
        timestamptz deleted_at
    }
    FIAT_HOLDINGS {
        uuid id PK
        uuid user_id FK
        uuid source_id FK
        text currency
        numeric amount
        timestamptz deleted_at
    }
    PRICE_CACHE {
        text coingecko_id PK
        numeric price_usd
        numeric price_idr
        timestamptz fetched_at
    }
